file preview modal info and navigation arrow basic structure

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -518,7 +518,7 @@
 
             img {
                 max-width: 100%;
-                max-height: 91vh;
+                max-height: calc(100vh - 72px - 96px);
             }
 
             .spinner {
